# whim

./: Cargo.toml  LICENSE  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
examples/: bincode.rs  index.rs  search.rs
src/: entities.rs  ids.rs  indices.rs  lib.rs  tables.rs
src/search/: bitap.rs  mod.rs  ngram.rs  searchable.rs
