[package]
name = "whim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode = { workspace = true, optional = true }
codegen.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
ulid = { workspace = true, optional = true }

[features]
bincode = ["dep:bincode", "codegen/bincode", "bincode/derive"]
serde = ["dep:serde"]
ulid = ["dep:ulid"]

[workspace]
resolver = "3"

members = [
    "codegen",
]

[workspace.package]
version = "0.0.0"
authors = ["Matthieu ARQUES <raisenku@prysmy.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/prysmy/whim"

[workspace.dependencies]
codegen = { path = "codegen", package = "whim-codegen" }

#
# External dependencies
#

bincode = "2.0"
quote = "1.0"
serde = "1.0"
syn = "2.0"
thiserror = "2.0"
ulid = "1.2"
